Security: Implement Role-Based Authentication, Swagger Implementation, Security Configuration And Documentation By Adding tags Descriptions, Operations of Api's